--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
         <div id="timer"></div>
     </div>
 
+    <canvas class="webgl"></canvas>
+
     <script type="module" src="./script.js"></script>
 </body>
 </html>
