--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
 <body>
 
     <div id="countdown">
-        <p class="txt">Coming soon...</p>
-        <div id="timer"></div>
+        <p class="txt">DevGames!</p>
+        <p class="txt-sm mt-1">Register in</p>
+        <div id="timer" class="mt-2"></div>
+        <p class="txt-sm mt-2">An annual Hackathon to compete in!</p>
     </div>
 
     <canvas class="webgl"></canvas>
