--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <canvas class="webgl"></canvas>
+    
+    <button id="play">Lift-off 🚀</button>
     <div id="countdown">
         <p class="txt">DevGames!</p>
         <p class="txt-sm mt-1">Register in</p>
@@ -15,7 +18,6 @@
         <p class="txt-sm mt-2">An annual Hackathon to compete in!</p>
     </div>
 
-    <canvas class="webgl"></canvas>
 
     <script type="module" src="./script.js"></script>
 </body>
