html/css updates 🔋

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <canvas class="webgl"></canvas>
     
-    <button id="play">Lift-off 🚀</button>
+    <button id="play">Lift-off <span class="emoji">🚀</span></button>
     <div id="countdown">
         <p class="txt">DevGames!</p>
         <p class="txt-sm mt-1">Register in</p>
