--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,21 @@
     <canvas class="webgl"></canvas>
     
     <button id="play">Lift-off <span class="emoji">🚀</span></button>
+
+    <div id="play-gui">
+        <p>🎮Controls🎮</p>
+        <ul>
+            <li><span class="keybind">W</span> - Boost</li>
+            <li><span class="keybind">A</span> - Reverse</li>
+            <li><span class="keybind">S</span> - Strafe Left</li>
+            <li><span class="keybind">D</span> - Strafe Right</li>
+            <li><span class="keybind">R</span> - Up</li>
+            <li><span class="keybind">F</span> - Down</li>
+            <li><span class="keybind">Mouse</span> - Look</li>
+            <li><span class="keybind">Esc</span> - Pause</li>
+        </ul>
+    </div>
+
     <div id="countdown">
         <p class="txt">DevGames!</p>
         <p class="txt-sm mt-1">Register in</p>
