mobile-alert content setup and defined - need to add further testing

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
     
     <button id="play">Lift-off <span class="emoji">🚀</span></button>
 
+    <div id="mobile-alert">
+        <p>🚀 Please use a Laptop / Desktop Browser to fully appreciate this experience 🚀</p>
+    </div>
+
     <div id="play-gui">
         <p>🎮Controls🎮</p>
         <ul>
