resolved play-gui control legend error and updated font 🕹

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         <p>🎮Controls🎮</p>
         <ul>
             <li><span class="keybind">W</span> - Boost</li>
-            <li><span class="keybind">A</span> - Reverse</li>
-            <li><span class="keybind">S</span> - Strafe Left</li>
+            <li><span class="keybind">A</span> - Strafe Left</li>
+            <li><span class="keybind">S</span> - Reverse</li>
             <li><span class="keybind">D</span> - Strafe Right</li>
             <li><span class="keybind">R</span> - Up</li>
             <li><span class="keybind">F</span> - Down</li>
