simple loader added ⌛

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <div class="loader">
+        <div class="loading">🚀...Loading...🚀</div>
+    </div>
+
     <canvas class="webgl"></canvas>
     
     <button id="play">Lift-off <span class="emoji">🚀</span></button>
