details & information added

--- a/src/index.html
+++ b/src/index.html
@@ -39,15 +39,35 @@
         <p class="txt-sm mt-2">An annual Hackathon to compete in!</p>
     </div>
 
-    <div id="details">
+    <div class="mx-3" id="details">
+        <div class="mt-2 mx-1" id="details-info">
+            <h3 class="my-1">The Event & Task</h3>
+    
+            <p>
+                This Hackathon will run from 9th of June through to the 23rd of June.
+                That's two whole weeks to create something.👏 You can work alone, or in a team
+                of up to 3 people! Form your own team of people you know or be your own Main Character.🧙‍♀️
+                We want you to have some freedom and time during this event to get something done. Something
+                that will be pitted against other teams with a winner being crowned at the end. 🏆
+            </p>
+    
+            <p class="mt-1">
+                The brief is basic and simple. Build a single level of a Game, that must have a defined start
+                and end. 🎮 You can build it using whatever you wish and for whatever medium but it must be
+                in a playable state for us to judge. Want to use Unity? Go ahead. PhaserJS and make it a browser
+                game, or maybe Pygame? Go for it! Literally there is no limitation on how you build it. As an example
+                we built this entire site using ThreeJS, where you can fly around the galaxy and find 3D objects.
+                It's not a level of a game, but the environment could be <i>part</i> of a game.
+            </p>
 
-        <h3>The Event & Task</h3>
-
-        <p class="mt-2 my-1">
-            Simply put, Hackathons are typically time-sensitive and collaborative events.
-            But this event will run from 9th of June through to the 23rd of June.
-            That's two whole weeks to create something.👏 You can work alone, or in a team of up to 3 people! Form your own team of people you know or be your own Main Character.🧙‍♀️
-        </p>
+            <p class="mt-1">
+                For the winners, we have secured Lifetime access to Bruno Simon's 
+                <a class="clr-link-animate" href="https://threejs-journey.com/" target="_blank" rel="noopener noreferrer">ThreeJS Journey Course</a>!
+                This course teaches 3D in the browser through WebGL and covers WebGL & ThreeJS topics such as Physics, Renderers,
+                Blender, React Three Fiber, Post-processing and so much more! Take a look at Bruno's course
+                and <a class="clr-link-animate" href="https://bruno-simon.com/" target="_blank" rel="noopener norerferrer">portfolio site</a> to learn more! 
+            </p>
+        </div>
 
 
         <form class="mt-1" action="" id="register_form">
