final updates before going live 🎉🎉

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <p class="txt-sm mt-2">An annual Hackathon to compete in!</p>
     </div>
 
-    <div class="mx-3" id="details">
+    <div id="details">
         <div class="mt-2 mx-1" id="details-info">
             <h3 class="my-1">The Event & Task</h3>
 
@@ -51,7 +51,7 @@
     
             <p class="mt-1">
                 The brief is basic and simple. Build a single level of a Game, that must have a defined start
-                and end. 🎮 You can build it using whatever you wishbut it must be in a playable state for us
+                and end. 🎮 You can build it using whatever you wish but it must be in a playable state for us
                 to judge. Want to use Unity? Or PhaserJS and make it a browser game? Go for it! Literally there
                 is no limitation on how you build it.
             </p>
@@ -64,7 +64,9 @@
                 and <a class="clr-link-animate" href="https://bruno-simon.com/" target="_blank" rel="noopener noreferrer">portfolio site</a> to learn more! 
             </p>
 
-            <a class="clr-link-animate" id="registration_link" href="https://forms.gle/Xgj69eWxny76iAmB7" target="_blank" rel="noopener noreferrer">📲Register your Interest Now📲</a>
+            <p class="mt-1">Register by clicking below and completing the online form!</p>
+
+            <a class="clr-link-animate" id="registration_link" href="https://forms.gle/Xgj69eWxny76iAmB7" target="_blank" rel="noopener noreferrer">📲Register your Interest</a>
         </div>        
     </div>
 
