initial html added with info & ideas added to README

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,45 @@
             <p class="mt-1">Register by clicking below and completing the online form!</p>
 
             <a class="clr-link-animate" id="registration_link" href="https://forms.gle/Xgj69eWxny76iAmB7" target="_blank" rel="noopener noreferrer">📲Register your Interest</a>
-        </div>        
+            
+            <h3 class="my-2">Ideas & Resources</h3>
+    
+            <ul class="list"><span>Need some ideas to create your game? Take a look at these examples!</span>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">The Mine by Jamie Coulter - Made entirely in CSS</a>
+                </li>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Single-Eyed by Koro.Games - Made in Unity</a>
+                </li>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">ReSync by Ghast - Made using PyGame & OpenGL</a>
+                </li>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Bogus Roads by KilledByAPixel - Made in ThreeJS</a>
+                </li>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Ghouls just wanna have Fun by Vimlark - Made in Construct</a>
+                </li>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Only-One Level by Abababbb - Made in Unity</a>
+                </li>
+            </ul>
+
+            <ul class="list"><span>What about some Resources to get you started? 📖</span>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">PhaserJS</a>
+                </li>
+            </ul>
+
+            <ul class="list"><span>Communities to get involved in and share your projects. 🏙️🌆</span>
+                <li class="li">
+                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Bruno Simon</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="mt-2 mx-1" id="resources-info">
+        </div>
     </div>
 
     <script type="module" src="./script.js"></script>
