typos & fixing empty links

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             </p>
     
             <p class="mt-1">
-                The brief is basic and simple. Build a single level of a Game, that must have a defined start
+                The brief is basic and simple. Build a single level of a Game that must have a defined start
                 and end. 🎮 You can build it using whatever you wish but it must be in a playable state for us
                 to judge. Want to use Unity? Or PhaserJS and make it a browser game? Go for it! Literally there
                 is no limitation on how you build it.
@@ -72,22 +72,22 @@
     
             <ul class="list"><span>Need some ideas to create your game? Take a look at these examples!</span>
                 <li class="examples-li">
-                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">The Mine by Jamie Coulter - Made entirely in CSS</a>
+                    <a class="clr-link-animate" href="https://codepen.io/jcoulterdesign/pen/NOMeEb" target="_blank" rel="noopener noreferrer">The Mine by Jamie Coulter - Made entirely in CSS</a>
                 </li>
                 <li class="examples-li">
-                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Single-Eyed by Koro.Games - Made in Unity</a>
+                    <a class="clr-link-animate" href="https://korogames.itch.io/single-eyed" target="_blank" rel="noopener noreferrer">Single-Eyed by Koro.Games - Made in Unity</a>
                 </li>
                 <li class="examples-li">
-                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">ReSync by Ghast - Made using PyGame & OpenGL</a>
+                    <a class="clr-link-animate" href="https://ghastly.itch.io/resync" target="_blank" rel="noopener noreferrer">ReSync by Ghast - Made using PyGame & OpenGL</a>
                 </li>
                 <li class="examples-li">
-                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Bogus Roads by KilledByAPixel - Made in ThreeJS</a>
+                    <a class="clr-link-animate" href="https://killedbyapixel.itch.io/bogus-roads" target="_blank" rel="noopener noreferrer">Bogus Roads by KilledByAPixel - Made in ThreeJS</a>
                 </li>
                 <li class="examples-li">
-                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Ghouls just wanna have Fun by Vimlark - Made in Construct</a>
+                    <a class="clr-link-animate" href="https://vimlark.itch.io/ghouls-just-wanna-have-fun" target="_blank" rel="noopener noreferrer">Ghouls just wanna have Fun by Vimlark - Made in Construct</a>
                 </li>
                 <li class="examples-li">
-                    <a class="clr-link-animate" href="" target="_blank" rel="noopener noreferrer">Only-One Level by Abababbb - Made in Unity</a>
+                    <a class="clr-link-animate" href="https://abababbb.itch.io/only-one-level" target="_blank" rel="noopener noreferrer">Only-One Level by Abababbb - Made in Unity</a>
                 </li>
             </ul>
 
@@ -112,6 +112,9 @@
                 </li>
                 <li class="resources-li">
                     <a class="clr-link-animate" href="https://threejs.org/" target="_blank" rel="noopener noreferrer">ThreeJS - Javascript Computer Graphics & OpenGL Library</a>
+                </li>
+                <li class="resources-li">
+                    <a class="clr-link-animate" href="https://kaboomjs.com/" target="_blank" rel="noopener noreferrer">Kaboom - Javascript Game Library</a>
                 </li>
             </ul>
 
