--- a/src/index.html
+++ b/src/index.html
@@ -61,12 +61,19 @@
                 <a class="clr-link-animate" href="https://threejs-journey.com/" target="_blank" rel="noopener noreferrer">ThreeJS Journey Course</a>!
                 This course teaches 3D in the browser through WebGL and covers WebGL & ThreeJS topics such as Physics, Renderers,
                 Blender, React Three Fiber, and so much more! Take a look at Bruno's course
-                and <a class="clr-link-animate" href="https://bruno-simon.com/" target="_blank" rel="noopener noreferrer">portfolio site</a> to learn more! 
+                and <a class="clr-link-animate" href="https://bruno-simon.com/" target="_blank" rel="noopener noreferrer">portfolio site</a> to learn more!
             </p>
 
-            <p class="my-2">Register by clicking below and completing the online form!</p>
+            <p class="mt-1">
+                Along with the prize above Gareth from <a href="https://dgultrait.com/" class="clr-link-animate" target="_blank" rel="noopener noreferrer">DG Ultra IT</a>
+                have graciously added an additional prize of Amazon Gift Vouchers for each of the members of the winning team! DG Ultra IT are a fantastic Web-dev company
+                building fully custom websites that are modern and accessible. In the market for a new website? Give the lads in DG Ultra IT a 
+                <a class="clr-link-animate" href="https://dgultrait.com/contact.html" target="_blank" rel="noopener noreferrer">message</a>. 📨
+            </p>
 
-            <a class="clr-link-animate" id="registration_link" href="https://forms.gle/Xgj69eWxny76iAmB7" target="_blank" rel="noopener noreferrer">📲Register your Interest</a>
+            <p class="my-2">Ready to Submit your project? Projects must be submitted by 11:59 on the 23/June.</p>
+
+            <a class="clr-link-animate" id="registration_link" href="https://forms.gle/xWUCqahoEkVrFeKC7" target="_blank" rel="noopener noreferrer">🎮Submit your Project🕹️</a>
             
             <h3 class="my-2 underline">Ideas & Resources</h3>
     
@@ -154,9 +161,9 @@
                 One Level - One Mission - One Goal. 🎮
             </p>
 
-            <p class="my-2">Register by clicking below and completing the online form!</p>
+            <p class="my-2">Ready to Submit your project? Projects must be submitted by 11:59 on the 23/June.</p>
 
-            <a class="clr-link-animate" id="registration_link" href="https://forms.gle/Xgj69eWxny76iAmB7" target="_blank" rel="noopener noreferrer">📲Register your Interest</a>
+            <a class="clr-link-animate" id="registration_link" href="https://forms.gle/xWUCqahoEkVrFeKC7" target="_blank" rel="noopener noreferrer">🎮Submit your Project🕹️</a>
         </div>
     </div>
 
