--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     
     <div id="countdown">
         <h1 class="txt">DevGames!</h1>
-        <h2 class="txt-sm mt-1">Registrations are live.</h2>
+        <h2 class="txt-sm mt-1">Submit your levels!</h2>
         <!-- <div id="timer" class="mt-2"></div> -->
         <p class="txt-sm mt-2">An annual Hackathon to compete in!</p>
     </div>
@@ -44,7 +44,7 @@
             <h3 class="my-2 underline">The Event & Task</h3>
 
             <p>
-                Running from 9th of June through to the 23rd of June. You can work alone, or in a team
+                Running from 9th of June through to the 30th of June. You can work alone, or in a team
                 of up to 3 people! With your project being pitted against other teams with a winner
                 being crowned at the end. 🏆
             </p>
@@ -65,13 +65,13 @@
             </p>
 
             <p class="mt-1">
-                Along with the prize above Gareth from <a href="https://dgultrait.com/" class="clr-link-animate" target="_blank" rel="noopener noreferrer">DG Ultra IT</a>
+                Along with the prize above, Gareth from <a href="https://dgultrait.com/" class="clr-link-animate" target="_blank" rel="noopener noreferrer">DG Ultra IT</a>
                 have graciously added an additional prize of Amazon Gift Vouchers for each of the members of the winning team! DG Ultra IT are a fantastic Web-dev company
                 building fully custom websites that are modern and accessible. In the market for a new website? Give the lads in DG Ultra IT a 
                 <a class="clr-link-animate" href="https://dgultrait.com/contact.html" target="_blank" rel="noopener noreferrer">message</a>. 📨
             </p>
 
-            <p class="my-2">Ready to Submit your project? Projects must be submitted by 11:59 on the 23/June.</p>
+            <p class="my-2">Ready to Submit your project? Projects must be submitted by 11:59 on the 30/June.</p>
 
             <a class="clr-link-animate" id="registration_link" href="https://forms.gle/xWUCqahoEkVrFeKC7" target="_blank" rel="noopener noreferrer">🎮Submit your Project🕹️</a>
             
@@ -161,7 +161,7 @@
                 One Level - One Mission - One Goal. 🎮
             </p>
 
-            <p class="my-2">Ready to Submit your project? Projects must be submitted by 11:59 on the 23/June.</p>
+            <p class="my-2">Ready to Submit your project? Projects must be submitted by 11:59 on the 30/June.</p>
 
             <a class="clr-link-animate" id="registration_link" href="https://forms.gle/xWUCqahoEkVrFeKC7" target="_blank" rel="noopener noreferrer">🎮Submit your Project🕹️</a>
         </div>
